--- a/Frontend_Files/html/index.html
+++ b/Frontend_Files/html/index.html
@@ -9,7 +9,7 @@
 	<script type="text/javascript" src='scripts/indexscript.js'></script>
 </head>
 
-<body background="images/squared_metal.png">
+<body>
 	<div>
 		<img src="images/matchbotlogo.png" id="logo"/>
 		<p>Talk to our MatchBot to meet your match!</p>
