--- a/Frontend_Files/html/matches.html
+++ b/Frontend_Files/html/matches.html
@@ -8,10 +8,9 @@
 	<script type="text/javascript" src='scripts/matchscript.js'></script>
 </head>
 
-<!--<body background="images/squared_metal.png">-->
-<body>
+<body background="images/squared_metal.png">
 	<div>
-		<h1>Meet your matches...</h1>
+		<img src="images/matchTitle.png" id="meet"/>
 		<div>
 			<table class="matches">
 				<tr>
