--- a/Frontend_Files/html/index.html
+++ b/Frontend_Files/html/index.html
@@ -1,17 +1,6 @@
-<!DOCTYPE html>
-<head>
-	<title>
-		MatchBot
-	</title>
-	<link rel='stylesheet' type= "text/css" href='styles/stylesheet.css'/>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-	<script type="text/javascript" src='scripts/chatwindow.js'></script>
-	<script type="text/javascript" src='scripts/indexscript.js'></script>
-</head>
 
-<body>
 	<div>
-		<img src="images/matchbotlogo.png" id="logo"/>
+		<%= image_tag 'matchbotlogo.png' %>
 		<p>Talk to our MatchBot to meet your match!</p>
 		<div>
 	<div class="chatwindow">
@@ -23,4 +12,3 @@
 	<div class="footer">
 		<a href="about.html"> About </a> | <a href="contact.html"> Contact us </a> | <a href="matches.html"> Matches </a>
 	</div>
-</body>
