--- a/Frontend_Files/html/about.html
+++ b/Frontend_Files/html/about.html
@@ -5,7 +5,7 @@
 	</title>
 	<link rel='stylesheet' type= "text/css" href='styles/stylesheet.css'/>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-	<script type="text/javascript" src='scripts/aboutscript.js'></script>
+	<script type="text/javascript" src='aboutscript.js'></script>
 </head>
 
 	<div>
