--- a/Frontend_Files/html/contact.html
+++ b/Frontend_Files/html/contact.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<head>
+	<title>
+		MatchBot Contact
+	</title>
+	<link rel='stylesheet' type= "text/css" href='styles/stylesheet.css'/>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+	<script type="text/javascript" src='scripts/chatwindow.js'></script>
+	<script type="text/javascript" src='scripts/contactscript.js'></script>
+</head>
 
 	<div>
 		<img src="images/matchbotlogo.png" id="logo"/>
