--- a/Frontend_Files/html/index.html
+++ b/Frontend_Files/html/index.html
@@ -1,14 +1,25 @@
+<!DOCTYPE html>
+<head>
+	<title>
+		MatchBot
+	</title>
+	<link rel='stylesheet' type= "text/css" href='styles/stylesheet.css'/>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+	<script type="text/javascript" src='scripts/chatwindow.js'></script>
+	<script type="text/javascript" src='scripts/indexscript.js'></script>
+</head>
 
+<body>
 	<div>
-		<%= image_tag 'matchbotlogo.png' %>
+		<img src="images/matchbotlogo.png" id="logo"/>
 		<p>Talk to our MatchBot to meet your match!</p>
 		<div>
 	<div class="chatwindow">
 	</div>
 	<div id="userinput">
 		<input name="inputtext" placeholder="Press enter to send"/>
-		<!--<div id="usersubmit">Say it!</div>-->
 	</form>
 	<div class="footer">
 		<a href="about.html"> About </a> | <a href="contact.html"> Contact us </a> | <a href="matches.html"> Matches </a>
 	</div>
+</body>
