--- a/Frontend_Files/html/contact.html
+++ b/Frontend_Files/html/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 	<title>
-		MatchBot Contact
+		MatchBot About
 	</title>
 	<link rel='stylesheet' type= "text/css" href='styles/stylesheet.css'/>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
@@ -9,7 +9,9 @@
 	<script type="text/javascript" src='scripts/contactscript.js'></script>
 </head>
 
+<body>
 	<div>
+		<img src="images/matchbotlogo.png" id="logo"/>
 		<p>Fill out this form!</p>
 		<div>
 	<div class="chatwindow">
@@ -18,3 +20,7 @@
 		<input name="inputtext" placeholder="Press enter to send"/>
 		<!--<div id="usersubmit">Say it!</div>-->
 	</form>
+	<div class="footer">
+		<a href="index.html"> Back to MatchBot </a> | <a href="about.html"> About </a>
+	</div>
+</body>
