--- a/Frontend_Files/html/matches.html
+++ b/Frontend_Files/html/matches.html
@@ -1,4 +1,14 @@
+<!DOCTYPE html>
+<head>
+	<title>
+		MatchBot About
+	</title>
+	<link rel='stylesheet' type= "text/css" href='styles/stylesheet.css'/>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+	<script type="text/javascript" src='scripts/matchscript.js'></script>
+</head>
 
+<body>
 	<div>
 		<img src="images/matchTitle.png" id="meet"/>
 		<div>
@@ -29,3 +39,8 @@
 				</tr>
 			</table>
 		</div>
+
+	<div class="footer">
+		<a href="index.html"> Back to MatchBot </a> | <a href="about.html"> About </a>
+	</div>
+</body>
