--- a/Frontend_Files/html/about.html
+++ b/Frontend_Files/html/about.html
@@ -1,12 +1,62 @@
+<!DOCTYPE html>
+<head>
+	<title>
+		MatchBot About
+	</title>
+	<link rel='stylesheet' type= "text/css" href='styles/stylesheet.css'/>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+	<script type="text/javascript" src='scripts/aboutscript.js'></script>
+</head>
 
 	<div>
+		<img src="images/aboutTitle.png" id="meet"/>
 		<p>LINK TO RESEARCH HERE</p>
 		<p>Also, cite plugins, etc</p>
 		<div>
-	<div class="chatwindow">
-	</div>
-	<div id="userinput">
-		<input name="inputtext" placeholder="Press enter to send"/>
-		<!--<div id="usersubmit">Say it!</div>-->
-	</form>
+		<div>
+			<table class="matches">
+				<tr>
+					<td>
+						<div class="bar">
+							<div class="percentage"></div>
 
+						</div>
+						<div class="snippet">
+						</div>
+					</td>
+					<td>
+						<div class="bar">
+							<div class="percentage"></div>
+						</div>
+						<div class="snippet">
+						</div>
+					</td>
+					<td>
+						<div class="bar">
+							<div class="percentage"></div>
+						</div>
+						<div class="snippet">
+						</div>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<div class="bar">
+							<div class="percentage"></div>
+						</div>
+						<div class="snippet">
+						</div>
+					</td>
+					<td>
+						<div class="bar">
+							<div class="percentage"></div>
+						</div>
+						<div class="snippet">
+						</div>
+					</td>
+				</tr>
+			</table>
+		</div>
+	<div class="footer">
+		<a href="index.html"> Back to MatchBot </a> | <a href="contact.html"> Contact us </a>
+	</div>
