--- a/Frontend_Files/html/matches.html
+++ b/Frontend_Files/html/matches.html
@@ -15,31 +15,30 @@
 			<table class="matches">
 				<tr>
 					<td>
+						<div class="email"></div>
 						<div class="bar">
 							<div class="percentage"></div>
-
 						</div>
-						<div class="snippet">
-						</div>
+						<div class="snippet"></div>
 					</td>
 					<td>
+						<div class="email"></div>
 						<div class="bar">
 							<div class="percentage"></div>
 						</div>
-						<div class="snippet">
-						</div>
+						<div class="snippet"></div>
 					</td>
 					<td>
+						<div class="email"></div>
 						<div class="bar">
 							<div class="percentage"></div>
 						</div>
-						<div class="snippet">
-						</div>
+						<div class="snippet"></div>
 					</td>
 				</tr>
 			</table>
 		</div>
-
+    </div>
 	<div class="footer">
 		<a href="index.html"> Back to MatchBot </a> | <a href="about.html"> About </a>
 	</div>
