--- a/Frontend_Files/html/index.html
+++ b/Frontend_Files/html/index.html
@@ -18,8 +18,10 @@
 	</div>
 	<div id="userinput">
 		<input name="inputtext" placeholder="Press enter to send"/>
+	</div>
 	<div class="footer">
 		<a href="about.html"> About </a> | <a href="contact.html"> Contact us </a> | <a href="matches.html"> Matches </a>
 	</div>
 </body>
+
 
