--- a/Frontend_Files/html/index_v2.html
+++ b/Frontend_Files/html/index_v2.html
@@ -3,10 +3,10 @@
 	<title>
 		MatchBot
 	</title>
-	<link rel='stylesheet' type= "text/css" href='styles/stylesheet.css'/>
+	<link rel='stylesheet' type= "text/css" href='styles/stylesheet_v2.css'/>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-	<script type="text/javascript" src='scripts/chatwindow.js'></script>
-	<script type="text/javascript" src='scripts/indexscript.js'></script>
+	<script type="text/javascript" src='scripts/chatwindow_v2.js'></script>
+	<script type="text/javascript" src='scripts/indexscript_v2.js'></script>
 </head>
 
 <body>
@@ -15,9 +15,12 @@
 		<p>Talk to our MatchBot to meet your match!</p>
 		<div>
 	<div class="chatwindow">
-	</div>
-	<div id="userinput">
-		<input name="inputtext" placeholder="Press enter to send"/>
+		<table class='prompt'>
+			<tr>
+				<td width="30px"><span>You:</span></td>
+				<td><input id="userinput" name='inputtext' placeholder='Type here'/></td>
+			</tr>
+		</table>
 	</div>
 	<div class="footer">
 		<a href="about.html"> About </a> | <a href="contact.html"> Contact us </a> | <a href="matches.html"> Matches </a>
