--- a/Frontend_Files/html/index.html
+++ b/Frontend_Files/html/index.html
@@ -1,16 +1,6 @@
-<!DOCTYPE html>
-<head>
-	<title>
-		MatchBot
-	</title>
-	<link rel='stylesheet' type= "text/css" href='styles/stylesheet.css'/>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-	<script type="text/javascript" src='scripts/chatwindow.js'></script>
-	<script type="text/javascript" src='scripts/indexscript.js'></script>
-</head>
-
-<body>
-	<div>
+<%= javascript_include_tag "indexscript" %>
+<%= javascript_include_tag "chatwindow" %>
+    <div>
 		<img src="images/matchbotlogo.png" id="logo"/>
 		<p>Talk to our MatchBot to meet your match!</p>
 		<div>
@@ -19,9 +9,4 @@
 	<div id="userinput">
 		<input name="inputtext" placeholder="Press enter to send"/>
 	</div>
-	<div class="footer">
-		<a href="about.html"> About </a> | <a href="contact.html"> Contact us </a> | <a href="matches.html"> Matches </a>
-	</div>
-</body>
-
 
