up-to-date html and js

--- a/Frontend_Files/html/index.html
+++ b/Frontend_Files/html/index.html
@@ -11,13 +11,13 @@
 
 <body>
 	<div>
-		<img src="images/matchbotlogo.png" id="logo"/>
-		<p>Talk to MatchBot to meet your match!</p>
+		<img src="images/matchbotlogo_alpha.png" id="logo"/>
+		<p>Talk to our MatchBot to meet your match!</p>
 		<div>
 	<div class="chatwindow">
 		<table class='prompt'>
 			<tr>
-				<td width="50px"><span>You &#62;&#62; </span></td>
+				<td width="50px"><span>You &gt;&gt;  </span></td>
 				<td><input id="userinput" name='inputtext' placeholder='Type here'/></td>
 			</tr>
 		</table>
@@ -26,5 +26,3 @@
 		<a href="about.html"> About </a> | <a href="contact.html"> Contact us </a> | <a href="matches.html"> Matches </a>
 	</div>
 </body>
-
-
