contact.html up-dated

--- a/Frontend_Files/html/contact.html
+++ b/Frontend_Files/html/contact.html
@@ -15,11 +15,13 @@
 		<p>Fill out this form!</p>
 		<div>
 	<div class="chatwindow">
+		<table class='prompt'>
+			<tr>
+				<td width="50px"><span>You &gt;&gt;  </span></td>
+				<td><input id="userinput" name='inputtext' placeholder='Type here'/></td>
+			</tr>
+		</table>
 	</div>
-	<div id="userinput">
-		<input name="inputtext" placeholder="Press enter to send"/>
-		<!--<div id="usersubmit">Say it!</div>-->
-	</form>
 	<div class="footer">
 		<a href="index.html"> Back to MatchBot </a> | <a href="about.html"> About </a>
 	</div>
